<resources>
    <string name="web_client_id">732032333258-2d3eethefki13kngfue4gipqeg90j67p.apps.googleusercontent.com</string>
    <string name="app_name">FinanceManager</string>
    <string name="manage_your_nfinances_smartly">Manage Your\nFinances Smartly.</string>
    <string name="track_your_income_and_expenses_n_control_your_spending_with_smart_financia_n_decisions_grow_your_savings_and_build_a_secure_future">Track your income and expenses\n Control your spending with smart financia\n decisions Grow your savings and build a secure future</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_added">Transaction Added</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="_5432_5311_7603_5602">5432 5311 7603 5602</string>
    <string name="back">back</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="add_new_entry">Add New Entry</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="_0_00">0.00</string>
    <string name="select_category">Select Category</string>
    <string name="shopping">Shopping</string>
    <string name="travel">Travel</string>
    <string name="movies">Movies</string>
    <string name="today_oct_24_2023">Today, Oct 24 2023</string>
    <string name="select_mode">SELECT MODE</string>
    <string name="add_transaction">+ Add Transaction</string>
    <string name="expense">Expense</string>
    <string name="amount_debit">Amount Debit</string>
    <string name="date">DATE</string>
    <string name="e_g_grocery_shopping">e.g. Grocery Shopping</string>
    <string name="gym">Gym</string>
    <string name="health">Health</string>
    <string name="other">Other</string>
    <string name="title">TITLE</string>
    <string name="dining">Dining</string>
    <string name="rent">Rent</string>
    <string name="all_transactions_are_encrypted_and_secured_nusing_256_bit_protocol">All transactions are encrypted and secured\nusing 256-bit protocol.</string>
    <string name="income">Income</string>
    <string name="amount_credit">Amount Credit</string>
    <string name="welcome">Welcome,</string>
    <string name="login_page">Login Page!</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="or">OR</string>
    <string name="google_icon_desc">google_icon_desc</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="repassword">Repassword</string>
    <string name="reenter_your_password">Reenter Your Password</string>
    <string name="signup">SignUp</string>
    <string name="loading">Loading...</string>
    <string name="total_balance">TOTAL BALANCE</string>
    <string name="_00_000_00">₹00,000.00</string>
    <string name="_0_000">-₹0,000</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="categories">Categories</string>
    <string name="_0">₹0</string>
    <string name="spent">SPENT</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="see_all">See All</string>
    <string name="monthly_summary">Monthly Summary</string>
    <string name="october_2023">October 2023</string>
    <string name="wed">Wed</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="user">User</string>
    <string name="premium">Premium</string>
    <string name="premium_member">PREMIUM MEMBER</string>
    <string name="appearance">APPEARANCE</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="adjust_your_visual_experience">Adjust your visual experience</string>
    <string name="general_settings">GENERAL SETTINGS</string>
    <string name="privacy">Privacy</string>
    <string name="notifications">Notifications</string>
    <string name="help_center">Help Center</string>
    <string name="logout">Logout</string>
    <string name="app_version_1_0">APP VERSION 1.0</string>
    <string name="account_settings">Account Settings</string>
    <string name="exp_date">Exp Date</string>
    <string name="sourav_pati">SOURAV PATI</string>
    <string name="_04_31">04/31</string>
    <string name="apple_store">Apple Store</string>
    <string name="technology_today_2_45_pm">Technology • Today, 2:45 PM</string>
    <string name="_999_00">-₹999.00</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
</resources>