<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SignUp">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="205dp"

                android:importantForAccessibility="no"
                android:src="@drawable/banner12"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"

                android:fontFamily="@font/poppinsregular"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"

                android:fontFamily="@font/poppinsregular"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/white_cornor_background"

                android:orientation="vertical"
                tools:ignore="UselessParent">


                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="8dp"

                    android:fontFamily="@font/poppinsregular"

                    android:text="@string/name"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/signup_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"

                    android:background="@drawable/signupedittextbg"
                    android:ems="10"
                    android:hint="@string/enter_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:textColor="@color/text_primary"
                    android:textColorHint="#FFFFFF"
                    android:textSize="16sp"

                    tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"

                    android:fontFamily="@font/poppinsregular"

                    android:text="@string/email"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"

                    android:background="@drawable/signupedittextbg"
                    android:ems="10"
                    android:hint="@string/enter_your_email"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:textColor="@color/white"
                    android:textColorHint="#ffffff"
                    android:textSize="16sp"

                    tools:ignore="RtlSymmetry,TextFields,TextContrastCheck,VisualLintTextFieldSize" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"

                    android:fontFamily="@font/poppinsregular"

                    android:text="@string/password"
                    android:textColor="@color/black" />

                <EditText
                    android:focusableInTouchMode="true"
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"

                    android:background="@drawable/signupedittextbg"
                    android:ems="10"
                    android:hint="@string/enter_your_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:textColor="@color/white"
                    android:textColorHint="#FFFFFF"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"

                    android:fontFamily="@font/poppinsregular"

                    android:text="@string/repassword"
                    android:textColor="@color/black" />

                <EditText
                    android:focusableInTouchMode="true"
                    android:id="@+id/signup_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"

                    android:background="@drawable/signupedittextbg"
                    android:ems="10"
                    android:hint="@string/reenter_your_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:textColor="@color/white"
                    android:textColorHint="#FFFFFF"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />


                <RelativeLayout
                    android:id="@+id/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/signup_button_background_ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/sign_up_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/poppinsregular"
                        android:text="@string/signup"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/signup_animation"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:visibility="gone"
                        app:lottie_autoPlay="false"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/loadinganimation" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/already_have_an_account"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/signuplogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="140dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>