<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
            <ImageView
                android:layout_marginTop="-10dp"
                android:layout_width="match_parent"
                android:layout_height="205dp"

                android:importantForAccessibility="no"
                android:src="@drawable/banner12"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"

                android:fontFamily="@font/poppinsregular"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"

                android:fontFamily="@font/poppinsregular"
                android:text="@string/login_page"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/white_cornor_background"

                android:orientation="vertical"
                tools:ignore="UselessParent">


                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"

                    android:fontFamily="@font/poppinsregular"

                    android:text="@string/email"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"

                    android:background="@drawable/signupedittextbg"
                    android:ems="10"
                    android:hint="@string/enter_your_email"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:textColor="@color/white"
                    android:textColorHint="#ffffff"
                    android:textSize="16sp"

                    tools:ignore="RtlSymmetry,TextFields,TextContrastCheck,VisualLintTextFieldSize" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"

                    android:fontFamily="@font/poppinsregular"

                    android:text="@string/password"
                    android:textColor="@color/black" />

                <EditText
                    android:focusableInTouchMode="true"
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"

                    android:background="@drawable/signupedittextbg"
                    android:ems="10"
                    android:hint="@string/enter_your_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:textColor="@color/white"
                    android:textColorHint="#FFFFFF"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="12dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="#BDBDBD" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/or"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:fontFamily="sans-serif-medium" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="#BDBDBD" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/google_btn"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="16dp"
                    android:gravity="center"
                    android:background="@drawable/sign_in_withgoogle_background"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/googlepng"
                        android:contentDescription="@string/google_icon_desc" />

                    <TextView
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/sign_in_with_google"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:fontFamily="sans-serif-medium" />
                </LinearLayout>


                <TextView
                    android:id="@+id/forgetpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="@color/primary" />
                <RelativeLayout
                    android:id="@+id/sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/getstartbtn"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/sign_in_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/robot1"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/signin_animation"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:visibility="gone"
                        app:lottie_autoPlay="false"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/loadinganimation" />

                </RelativeLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/don_t_have_an_account"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/loginsignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textColor="@color/primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>