<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="6dp"
    android:layout_marginHorizontal="2dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical">


        <FrameLayout
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:background="@drawable/bg_circle_light"
            android:layout_marginEnd="12dp">

            <ImageView
                android:id="@+id/imgCategory"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_shopping"
                app:tint="#075292"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:fontFamily="@font/poppinsmedium"
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apple_store"
                android:textColor="#11183E"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvNote"
                android:fontFamily="@font/poppinsmedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/technology_today_2_45_pm"
                android:textColor="#9E9E9E"
                android:textSize="11sp"
                android:layout_marginTop="2dp"/>
        </LinearLayout>
        <TextView
            android:fontFamily="@font/poppinsregular"
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_999_00"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#E53935"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>